Fixed footer on small screens

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -26,6 +26,25 @@ body {
     margin-right: 5%;
   }
 }
+.d-svg {
+  width:18px;
+  height:18px; 
+  margin-top: 8px;
+}
+.d-text {
+  margin-left: 24px;
+}
+@media (max-height:662px) {
+  .d-svg {
+    height: 12px;
+    width: 12px;
+    margin-top: 4px;
+  }
+  .d-text {
+    font-size: 12px;
+    margin-left: 18px;
+  }
+}
 svg {
   width: 50px;
   height: 50px;
